Update Hewan Route and Controller
